<resources>

    <string name="app_name">IIITA MUN \'17</string>

    <string name="title_home">HOME</string>
    <string name="title_secretariat">SECRETARIAT</string>
    <string name="title_resources">RESOURCES</string>

    <string name="title_aboutus">About Us</string>
    <string name="title_committees">Committees</string>
    <string name="title_aboutmun">About MUN</string>
    <string name="title_apply">Apply</string>

    <string name="res_bg_disec">Background Guide (DISEC)</string>
    <string name="res_bg_sc">Background Guide (SC)</string>
    <string name="res_reuters">Reuters</string>
    <string name="res_factbook">CIA World Factbook</string>
    <string name="res_world_bank">World Bank</string>

    <string name="img_description">Profile Image</string>
    <string name="logo_description">Splash Logo</string>

    <string name="text_about">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.

Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc</string>

    <string name="title_activity_about_us">About Us</string>
    <string name="action_settings">Settings</string>

    <string name="detail_disec">The <b>Disarmament and International Security Committee</b> deals with disarmament, global challenges and threats to peace that affect the international community and seeks out solutions to the challenges in the international security.It considers all disarmament and international security matters within the scope of the Charter or relating to the powers and functions of any other organ of the United Nations.
    \n\n <b>Agenda: </b> \n\n "Necessity of Military Aid in the 21st century" </string>

    <string name="detail_sc">The <b>Security Council</b> is the United Nations\' most powerful body, with \"primary responsibility for the maintenance of international peace and security.\" Five powerful countries sit as permanent members along with ten elected members with two-year terms. Since 1990, the Council has dramatically increased its activity and the council now meets in nearly continuous session.
    \n\n <b>Agenda: </b> \n\n "Nuclear Non Proliferation and the Democratic People's Republic of Korea" </string>

    <string name="detail_about_mun">To put it simply, Model UN is cos-play for people who find following current affairs equally interesting as a nerd would find his comics. However, MUN conferences differ from Comic Cons in that the delegates actually do use their superpowers of research, critical thinking, public speaking and teamwork to draft solutions to issues that have kept diplomats scratching their heads over the years. It is easy to dismiss MUNs as simply a simulation of the UN framework, but that would only tell the beginning of the story. (Not even the beginning, as modern day MUNs evolved from Model League of Nations, a simulation of the UN\'s failed predecessor).
        With the joint creative forces of innumerable creative minds from high school and college students (and increasing numbers of people beyond) MUNs have evolved and diversified at unthinking proportions over the years. Today, any council - real or fictional, futuristic or historical - that seeks to resolve disputes by means of meaningful diplomacy can be found simulated at a Model UN conference. The Best Delegate and other mentions add a competitive flair to the collaborative environment and help bring out the unprecedented from the council.</string>

    <string name="title_developer">App Developer</string>
    <string name="name_developer">Sashank Mishra</string>
    <string name="title_disec">Disarmament and International Security Committee</string>
    <string name="title_sc">United Nations Security Council</string>
    <string name="title_misc">Miscellaneous</string>
    <string name="res_aljazeera">Al Jazeera</string>
    <string name="res_britannica">Britannica</string>
    <string name="title_blog">Blog</string>
    <string name="title_designer">Creative Designer</string>
    <string name="name_designer1">Siddhant Srivastav</string>
    <string name="name_designer2">Rishi Shukla</string>
    <string name="menu_locate">Locate Us</string>
    <string name="menu_rate">Rate Us</string>
    <string name="menu_web">Web</string>
    <string name="menu_credits">Credits</string>


</resources>
