<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/locate_us"
        android:icon="@drawable/locate_us"
        android:title="@string/menu_locate"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:menuCategory="secondary"/>
    <item android:id="@+id/rate_us"
        android:icon="@drawable/rate_us"
        android:title="@string/menu_rate"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:menuCategory="secondary"/>
    <item android:id="@+id/web"
        android:title="@string/menu_web"
        app:showAsAction="never"
        android:orderInCategory="1"
        android:menuCategory="secondary"/>
    <item android:id="@+id/credits"
        android:title="@string/menu_credits"
        app:showAsAction="never"
        android:orderInCategory="1"
        android:menuCategory="secondary"/>
</menu>